# NickBOT

./: .env.example  .gitignore  .vercelignore  Dockerfile  README.md  alembic.ini  app.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  vercel.json
alembic/: env.py
api/: index.py  setup.py
locales/: en.json  ru.json  uz.json
scripts/: run.py
src/: bot.py  config.py
src/domain/: enums.py  exceptions.py  models.py
src/infrastructure/: cache.py  database.py  repository.py  scheduler.py
src/presentation/filters/: admin.py  force_join.py
src/presentation/handlers/: admin.py  bonus.py  favorites.py  history.py  language.py  leaderboard.py  menu.py  nickname.py  referral.py  search.py  start.py  styler.py
src/presentation/keyboards/: inline.py  reply.py
src/presentation/middlewares/: db.py  maintenance.py  throttling.py
src/services/: admin_service.py  broadcast_service.py  nickname_service.py  text_styler.py  user_service.py
src/utils/: helpers.py  localizer.py
