[project]
name = "nickforge-bot"
version = "1.0.0"
description = "Professional Telegram Nickname Generator Bot"
requires-python = ">=3.13"
dependencies = [
    "aiogram~=3.15",
    "sqlalchemy[asyncio]~=2.0",
    "asyncpg~=0.30",
    "alembic~=1.14",
    "redis[hiredis]~=5.2",
    "apscheduler~=3.10",
    "python-dotenv~=1.1",
    "pydantic~=2.10",
    "pydantic-settings~=2.7",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.vercel]
entrypoint = "api/index.py"
